--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,19 +1,19 @@
 # Pages
 pages:
-- Home: index.md
-- Notebook:
-  - Programing: 
-    - Python: 'notesmd/programing/python.md'
-    - Snakemake: 'notesmd/programing/snakemake.md'
-    - Biopython: 'notesmd/programing/biopython.md'
-    - Linux: 'notesmd/programing/linux.md'
-    - Django: 'notesmd/programing/django.md'
-    - Perl: 'notesmd/programing/perl.md'
-    - Booinformatics: 'notesmd/programing/bioinformatics.md'
-    - MkDocs: 'notesmd/programing/mkdocs.md'
-- Project on Github: project.md
-- Publish: publish.md
-- About me: me.md
+- 'Home': index.md
+- 'Notebook':
+  - 'Programing': 
+    - 'Python': 'notesmd/programing/python.md'
+    - 'Snakemake': 'notesmd/programing/snakemake.md'
+    - 'Biopython': 'notesmd/programing/biopython.md'
+    - 'Linux': 'notesmd/programing/linux.md'
+    - 'Django': 'notesmd/programing/django.md'
+    - 'Perl': 'notesmd/programing/perl.md'
+    - 'Bioinformatics': 'notesmd/programing/bioinformatics.md'
+    - 'MkDocs': 'notesmd/programing/mkdocs.md'
+- 'Project on Github': project.md
+- 'Publish': publish.md
+- 'About me': me.md
 
 
 # Project information
@@ -25,6 +25,10 @@ site_url: 'https://xuanblo.github.io'
 # Repository
 repo_name: "xuanblo/notebook"
 repo_url: "https://github.com/xuanblo/notebook"
+
+# site build
+site_dir: html/
+use_directory_urls: true
 
 
 # Copyright
